--- a/app/Game.css
+++ b/app/Game.css
@@ -15,6 +15,19 @@
   height: 100px;
   margin: 10px;
   border-radius: 50%;
+  border: 5px solid black;
 }
 
 /* 50% for position left */
+.player_0 {
+  background-color: white;
+  border: 1px solid black;
+}
+
+.player_1 {
+  background-color: red;
+}
+
+.player_2 {
+  background-color: blue;
+}
