--- a/app/Game.css
+++ b/app/Game.css
@@ -1,13 +1,84 @@
+body {
+  background-color: cornflowerblue;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+.app-container {
+  width: 800px;
+  height: 290px;
+  position: absolute;
+  left: 50%;
+  top: 10%;
+  margin-left: -400px;
+}
+
+.panel {
+  position: absolute;
+  background-color: lightgoldenrodyellow;
+  border: 8px solid burlywood;
+  -webkit-box-shadow: 7px 5px 15px 3px rgba(0, 0, 0, 0.9);
+  box-shadow: 7px 5px 15px 3px rgba(0, 0, 0, 0.9);
+  z-index: 1;
+}
+
+.header {
+  left: 49%;
+  top: 10px; /* top: 90px */
+  height: 80px;
+  width: 300px;
+  margin-left: -120px;
+}
+
+.header-text {
+  font-size: 30px;
+  font-weight: bold;
+  width: 240px;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.footer {
+  left: 50%;
+  top: 610px;
+  height: 80px;
+  width: 300px;
+  margin-left: -120px;
+}
+
+.footer button {
+  position: relative;
+  left: 50%;
+  top: 10%;
+  margin-left: -125px;
+  width: 250px;
+  height: 50px;
+  background-color: lightblue;
+  font-size: 30px;
+  -webkit-box-shadow: 7px 5px 15px 3px rgba(0, 0, 0, 0.9);
+  box-shadow: 7px 5px 15px 3px rgba(0, 0, 0, 0.9);
+  border: 5px solid chocolate;
+  font-weight: bold;
+}
+
 .gameBoard {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(4, 1fr);
   padding: 20px;
-  width: 500px;
+  width: 520px;
   position: absolute;
-  left: 35%;
-  marginleft: -250px;
+  left: 50%;
+  margin-left: -250px;
   top: 20%;
+  background-color: bisque;
+  border: 8px solid burlywood;
+  border-radius: 8%;
+  -webkit-box-shadow: 7px 5px 15px 3px rgba(0, 0, 0, 0.9);
+  box-shadow: 7px 5px 15px 3px rgba(0, 0, 0, 0.9);
 }
 
 .gameCircle {
@@ -21,7 +92,6 @@
 /* 50% for position left */
 .player_0 {
   background-color: white;
-  border: 1px solid black;
 }
 
 .player_1 {
