--- a/app/Game.css
+++ b/app/Game.css
@@ -1,21 +1,32 @@
+:root {
+  --background-color: cornflowerblue;
+  --board-background-color: bisque;
+  --board-border-color: burlywood;
+  --panel-background-color: lightgoldenrodyellow;
+  --panel-border-color: burlywood;
+  --player-no-player: white;
+  --player-player1: red;
+  --player-player2: green;
+}
+
 body {
-  background-color: cornflowerblue;
+  background-color: var(--background-color);
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 .app-container {
-  width: 800px;
-  height: 290px;
+  width: 750px;
+  height: 180px;
   position: absolute;
   left: 50%;
-  top: 10%;
+  top: 8%;
   margin-left: -400px;
 }
 
 .panel {
   position: absolute;
-  background-color: lightgoldenrodyellow;
-  border: 8px solid burlywood;
+  background-color: var(--panel-background-color);
+  border: 8px solid var(--panel-border-color);
   -webkit-box-shadow: 7px 5px 15px 3px rgba(0, 0, 0, 0.9);
   box-shadow: 7px 5px 15px 3px rgba(0, 0, 0, 0.9);
   z-index: 1;
@@ -23,7 +34,7 @@ body {
 
 .header {
   left: 49%;
-  top: 10px; /* top: 90px */
+  top: -20px; /* top: 90px */
   height: 80px;
   width: 300px;
   margin-left: -120px;
@@ -43,18 +54,18 @@ body {
 
 .footer {
   left: 50%;
-  top: 610px;
+  top: 600px;
   height: 80px;
   width: 300px;
-  margin-left: -120px;
+  margin-left: -140px;
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
 
 .footer button {
-  width: 140px;
+  width: 200px;
   height: 50px;
-  margin-left: 0.5px;
+  margin-left: 40px;
   margin-top: 6px;
   background-color: lightblue;
   font-size: 20px;
@@ -78,8 +89,8 @@ body {
   left: 50%;
   margin-left: -250px;
   top: 20%;
-  background-color: bisque;
-  border: 8px solid burlywood;
+  background-color: var(--board-background-color);
+  border: 8px solid var(--board-border-color);
   border-radius: 8%;
   -webkit-box-shadow: 7px 5px 15px 3px rgba(0, 0, 0, 0.9);
   box-shadow: 7px 5px 15px 3px rgba(0, 0, 0, 0.9);
@@ -95,13 +106,13 @@ body {
 
 /* 50% for position left */
 .player_0 {
-  background-color: white;
+  background-color: var(--player-no-player);
 }
 
 .player_1 {
-  background-color: red;
+  background-color: var(--player-player1);
 }
 
 .player_2 {
-  background-color: blue;
+  background-color: var(--player-player2);
 }
