--- a/app/Game.css
+++ b/app/Game.css
@@ -33,8 +33,8 @@ body {
 }
 
 .header {
-  left: 49%;
-  top: -20px; /* top: 90px */
+  left: 47.5%;
+  top: -10px; /* top: 90px */
   height: 80px;
   width: 300px;
   margin-left: -120px;
@@ -104,7 +104,6 @@ body {
   border: 5px solid black;
 }
 
-/* 50% for position left */
 .player_0 {
   background-color: var(--player-no-player);
 }
@@ -117,54 +116,10 @@ body {
   background-color: var(--player-player2);
 }
 
-/* @media only screen and (max-width: 600px) {
-  .app-container {
-    width: 90%;
-    margin-left: -45%;
-    top: 5%;
-    left: 50%;
-  }
+.center {
+  text-align: center;
+}
 
-  .header {
-    left: 50%;
-    top: 5px;
-    width: 100%;
-    margin-left: -50%;
-  }
-
-  .header-text {
-    font-size: 24px;
-  }
-
-  .gameBoard {
-    width: 100%;
-    margin-left: 0;
-    padding: 1px;
-    top: 20%;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-
-  .gameCircle {
-    width: 20vw;
-    height: 20vw;
-    margin: 2px;
-    border: 3px solid black;
-  }
-
-  .footer {
-    top: 95%;
-    left: 50%;
-    width: 80%;
-    margin-left: -40%;
-  }
-
-  .footer button {
-    width: 100%;
-    margin-left: 0;
-    font-size: 16px;
-  }
-} */
 @media only screen and (max-width: 600px) {
   body,
   html {
@@ -183,10 +138,10 @@ body {
   }
 
   .header {
-    left: 50%;
-    top: 20px;
-    width: 100%;
-    margin-left: -50%;
+    right: 50%;
+    top: -5px;
+    width: 60%;
+    margin-left: -27%;
   }
 
   .header-text {
@@ -196,6 +151,7 @@ body {
   .gameBoard {
     width: 100%;
     margin-left: 0;
+    margin-top: 30px;
     padding: 1px;
     top: 20%;
     left: 50%;
@@ -213,15 +169,16 @@ body {
     position: absolute;
     bottom: 0;
     left: 50%;
-    width: 80%;
-    margin-left: -40%;
-    padding: 10px 0;
+    width: 60%;
+    margin-top: 10px;
+    margin-left: -30%;
+    padding: 1px px;
     background-color: var(--panel-background-color);
   }
 
   .footer button {
     width: 100%;
-    margin-left: 0;
+    margin-left: 58px;
     font-size: 16px;
   }
 }
