--- a/app/Game.css
+++ b/app/Game.css
@@ -177,8 +177,11 @@ body {
   }
 
   .footer button {
+    position: absolute;
+    top: 0;
+    left: 0%;
     width: 100%;
-    margin-left: 58px;
+    margin-left: 0px;
     font-size: 16px;
   }
 }
